tests/negative/typecheck-fails/wrong-type-assigment.sp

justABool:Bool = True;

anotherBool:Bool = 123 + justABool;